fix overlap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -342,6 +342,7 @@
 
  /*===== 商品列表通用设置 ======*/
  .product-box {
+   margin-top: 50px;
    text-align: center;
    padding: 0 0 100px 0;
 
